--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <body>
         <div class="container">
             <div>
-                <h3>Away</h3>
+                <h3>Home</h3>
                 <h2 id="home-score">0</h2>
                 <button id="home-score-btn-1" onclick="increaseHomeScoreOne()">+1</button>
                 <button id="home-score-btn-1" onclick="increaseHomeScoreTwo()">+2</button>
