--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button id="home-score-btn-1" onclick="increaseHomeScoreThree()">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>Gest</h3>
                 <h2 id="gest">0</h2>
                 <button id="home-score-btn-1" onclick="ScoreOne()">+1</button>
                 <button id="home-score-btn-1" onclick="ScoreTwo()">+2</button>
